[gd_scene load_steps=3 format=4 uid="uid://b617wjctwpjyw"]

[ext_resource type="Script" uid="uid://crpl8k8qu2t70" path="res://Prefab/GUI/LevelEditor/EventContianer/LevelEventContianer.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="2"]

[node name="LevelEventContianer" type="PanelContainer"]
custom_minimum_size = Vector2(0, 32)
anchor_right = 0.296296
anchor_bottom = 0.0666667
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="EventOptionButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="UpButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
ignore_texture_size = true
text = "上移"

[node name="TextLabel" parent="VBoxContainer/HBoxContainer/UpButton" index="0"]
offset_right = 93.0
offset_bottom = 32.0
text = "上移"

[node name="DeleteButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
ignore_texture_size = true
text = "删除"

[node name="TextLabel" parent="VBoxContainer/HBoxContainer/DeleteButton" index="0"]
offset_right = 94.0
offset_bottom = 32.0
text = "删除"

[node name="SettingButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
ignore_texture_size = true
text = "编辑"

[node name="TextLabel" parent="VBoxContainer/HBoxContainer/SettingButton" index="0"]
offset_right = 94.0
offset_bottom = 32.0
text = "编辑"

[connection signal="item_selected" from="VBoxContainer/EventOptionButton" to="." method="EventOptionButtonItemSelected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/UpButton" to="." method="UpButtonPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="." method="DeleteButtonPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingButton" to="." method="SettingButtonPressed"]

[editable path="VBoxContainer/HBoxContainer/UpButton"]
[editable path="VBoxContainer/HBoxContainer/DeleteButton"]
[editable path="VBoxContainer/HBoxContainer/SettingButton"]
